--- a/LoginScreen.html
+++ b/LoginScreen.html
@@ -18,8 +18,8 @@
       <input type="password" id="password1" />
       <label for="password2" class="info">Confirm password</label>
       <input type="password" id="password2" />
-      <div class="checkbox">
-        <input type="checkbox" id="Terms" style="width:40px"/>
+      <div class="checkbox" style="display: flex;">
+        <input type="checkbox" id="Terms" />
         <label for="Terms">
           I agree with the Terms and Conditions, the Processing of Personal Data
           and the Processor Agreement.
