--- a/LoginScreen.html
+++ b/LoginScreen.html
@@ -9,7 +9,7 @@
     <img src="assets/logo.png" alt="logo" class="logo" />
     <div class="loginbox">
       <p class="business">Take your business to a next level.</p>
-      <h1 class="title">Create a new account.</h1>
+      <h1 class="title">create a new account.</h1>
       <label for="yourName" class="info">Your name</label>
       <input type="text" id="yourName" />
       <label for="email" class="info">Email</label>
@@ -18,15 +18,17 @@
       <input type="password" id="password1" />
       <label for="password2" class="info">Confirm password</label>
       <input type="password" id="password2" />
-      <div class="checkbox" style="display: flex;">
+      <div class="checkbox" style="display: flex">
         <input type="checkbox" id="Terms" />
-        <label for="Terms">
+        <label for="Terms" class="terms">
           I agree with the Terms and Conditions, the Processing of Personal Data
           and the Processor Agreement.
         </label>
       </div>
       <button type="submit" class="createAccount">Create Account</button>
-      <p>Already have an account?</p>
+      <p class="business" style="margin-top: 25px; margin-bottom: 5px">
+        Already have an account?
+      </p>
       <button type="submit" class="LogIn">Log in</button>
     </div>
   </body>
