--- a/LoginScreen.html
+++ b/LoginScreen.html
@@ -6,30 +6,36 @@
     <link rel="stylesheet" type="text/css" href="styleOfLogin.css" />
   </head>
   <body>
-    <img src="assets/logo.png" alt="logo" class="logo" />
+    <img src="assets/logo.svg" alt="logo" class="logo" />
     <div class="loginbox">
-      <p class="business">Take your business to a next level.</p>
-      <h1 class="title">create a new account.</h1>
-      <label for="yourName" class="info">Your name</label>
-      <input type="text" id="yourName" />
-      <label for="email" class="info">Email</label>
-      <input type="text" id="email" />
-      <label for="password1" class="info">Password</label>
-      <input type="password" id="password1" />
-      <label for="password2" class="info">Confirm password</label>
-      <input type="password" id="password2" />
-      <div class="checkbox" style="display: flex">
-        <input type="checkbox" id="Terms" />
-        <label for="Terms" class="terms">
-          I agree with the Terms and Conditions, the Processing of Personal Data
-          and the Processor Agreement.
-        </label>
+      <div class="znaky">
+        <img src="assets/CZ.svg" alt="cz" />
+        <img src="assets/GB.svg" alt="GB" />
       </div>
-      <button type="submit" class="createAccount">Create Account</button>
-      <p class="business" style="margin-top: 25px; margin-bottom: 5px">
-        Already have an account?
-      </p>
-      <button type="submit" class="LogIn">Log in</button>
+      <form>
+        <p class="business">Take your business to a next level.</p>
+        <h1 class="title">Create a new account.</h1>
+        <label for="yourName" class="info">Your name</label>
+        <input type="text" id="yourName" />
+        <label for="email" class="info">Email</label>
+        <input type="text" id="email" />
+        <label for="password1" class="info">Password</label>
+        <input type="password" id="password1" />
+        <label for="password2" class="info">Confirm password</label>
+        <input type="password" id="password2" />
+        <div class="checkbox" style="display: flex">
+          <input type="checkbox" id="Terms" />
+          <label for="Terms" class="terms">
+            I agree with the Terms and Conditions, the Processing of Personal
+            Data and the Processor Agreement.
+          </label>
+        </div>
+        <button type="submit" class="createAccount">Create Account</button>
+        <p class="business" style="margin-top: 25px; margin-bottom: 5px">
+          Already have an account?
+        </p>
+        <a href="https://cz.pornhub.com/gayporn" class="LogIn">Log in</a>
+      </form>
     </div>
   </body>
 </html>
