--- a/LoginScreen.html
+++ b/LoginScreen.html
@@ -30,12 +30,12 @@
         <div class="input-control">
           <label for="name" class="info">Your name</label>
           <input name="name" type="text" id="name" />
-          <div class="error"></div>
+          <div class="errorMessage"></div>
         </div>
         <div class="input-control">
           <label for="email" class="info" required>Email</label>
           <input name="email" type="text" id="email" />
-          <div class="error"></div>
+          <div class="errorMessage"></div>
         </div>
         <!-- Input box s buttonem oka pro funkci přehozeni typu inputu -->
         <div class="input-control">
@@ -50,7 +50,7 @@
           <button type="button" onclick="togglePassword('password')">
             <img src="assets/akar-icons_eye-open.svg" />
           </button>
-          <div class="error"></div>
+          <div class="errorMessage"></div>
         </div>
         <!-- ------------------------------------------------------------ -->
         <!-- Input box s buttonem oka pro funkci přehozeni typu inputu -->
@@ -67,12 +67,12 @@
             <img src="assets/akar-icons_eye-open.svg" />
           </button>
 
-          <div class="error"></div>
+          <div class="errorMessage"></div>
         </div>
         <!-- ------------------------------------------------------------ -->
         <div class="checkbox" style="display: flex">
-          <input type="checkbox" id="Terms" />
-          <label for="Terms" class="terms">
+          <input type="checkbox" id="checkbox" />
+          <label for="checkbox" class="terms">
             I agree with the Terms and Conditions, the Processing of Personal
             Data and the Processor Agreement.
           </label>
