--- a/RegisterScreen.html
+++ b/RegisterScreen.html
@@ -25,8 +25,14 @@
       </div>
       <!-- Formulář action="/Database.html" method="GET" -->
       <form id="form">
-        <p class="business">welcome back</p>
-        <h1 class="title">log in</h1>
+        <p class="business">Take your business to a next level.</p>
+        <h1 class="title">Create a new account</h1>
+        <div class="input-control">
+          <label for="name" class="info">Your name</label
+          ><img src="/assets/requirement.svg" alt="r" class="requirements" />
+          <input name="name" type="text" id="name" />
+          <div class="errorMessage"></div>
+        </div>
         <div class="input-control">
           <label for="email" class="info" required>Email</label
           ><img src="/assets/requirement.svg" alt="r" class="requirements" />
@@ -50,9 +56,30 @@
           <div class="errorMessage"></div>
         </div>
         <!-- ------------------------------------------------------------ -->
+        <!-- Input box s buttonem oka pro funkci přehozeni typu inputu -->
+        <div class="input-control">
+          <label for="password2" class="info">Confirm password</label
+          ><img src="/assets/requirement.svg" alt="r" class="requirements" />
+
+          <input
+            name="password"
+            type="password"
+            id="password2"
+            class="passwordIcon"
+          />
+          <button type="button" onclick="togglePassword('password2')">
+            <img src="assets/akar-icons_eye-open.svg" />
+          </button>
+
+          <div class="errorMessage"></div>
+        </div>
+        <!-- ------------------------------------------------------------ -->
         <div class="checkbox">
           <input type="checkbox" id="checkbox" />
-          <label for="checkbox" class="terms"> Rembember the password</label>
+          <label for="checkbox" class="terms">
+            I agree with the Terms and Conditions, the Processing of Personal
+            Data and the Processor Agreement.</label
+          >
         </div>
         <button type="submit" class="createAccount">Create Account</button>
         <p class="business" style="margin-top: 25px; margin-bottom: 5px">
