--- a/LoginScreen.html
+++ b/LoginScreen.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registration</title>
+    <title>Login</title>
     <link rel="stylesheet" type="text/css" href="assets/normalize.css" />
     <!-- normalize preset -->
     <link rel="stylesheet" type="text/css" href="styleOfLogin.css" />
@@ -24,7 +24,7 @@
         </button>
       </div>
       <!-- Formulář action="/Database.html" method="GET" -->
-      <form id="form">
+      <form id="form" method="post">
         <p class="business">welcome back</p>
         <h1 class="title">log in</h1>
         <div class="input-control">
