--- a/RegisterScreen.html
+++ b/RegisterScreen.html
@@ -24,7 +24,7 @@
         </button>
       </div>
       <!-- Formulář action="/Database.html" method="GET" -->
-      <form id="form">
+      <form id="form" method="post">
         <p class="business">Take your business to a next level.</p>
         <h1 class="title">Create a new account</h1>
         <div class="input-control">
@@ -43,16 +43,12 @@
         <div class="input-control">
           <label for="password" class="info">Password</label
           ><img src="/assets/requirement.svg" alt="r" class="requirements" />
-
-          <input
-            name="password"
-            type="password"
-            id="password"
-            class="passwordIcon"
-          />
-          <button type="button" onclick="togglePassword('password')">
-            <img src="assets/akar-icons_eye-open.svg" />
-          </button>
+          <div class="wrap">
+            <input name="password" type="password" id="password" />
+            <button type="button" onclick="togglePassword('password')">
+              <img src="assets/akar-icons_eye-open.svg" />
+            </button>
+          </div>
           <div class="errorMessage"></div>
         </div>
         <!-- ------------------------------------------------------------ -->
@@ -60,17 +56,12 @@
         <div class="input-control">
           <label for="password2" class="info">Confirm password</label
           ><img src="/assets/requirement.svg" alt="r" class="requirements" />
-
-          <input
-            name="password"
-            type="password"
-            id="password2"
-            class="passwordIcon"
-          />
-          <button type="button" onclick="togglePassword('password2')">
-            <img src="assets/akar-icons_eye-open.svg" />
-          </button>
-
+          <div class="wrap">
+            <input name="password" type="password" id="password2" />
+            <button type="button" onclick="togglePassword('password2')">
+              <img src="assets/akar-icons_eye-open.svg" />
+            </button>
+          </div>
           <div class="errorMessage"></div>
         </div>
         <!-- ------------------------------------------------------------ -->
